# browser-llm-automation

./: .env.example  .gitignore  README.md  agent.py  analyze_video.py  apply_job.py  browser_controller.py  dom_extractor.py  gdoc_login.py  gdoc_to_pdf.py  generate_resume.py  learned_answers.json  learned_patterns.json  linkedin_apply.py  llm_planner.py  main.py  pyproject.toml  vercel.json
api/: _current_role.json  _db.py  _default_resume.txt  _engine.py  index.py  requirements.txt
backend/: .gitignore  database.py  main.py  render.yaml  requirements.txt  resume_engine.py
data/: current_role.json
dsa_website/: HOSTING_AND_MONETIZATION.md  index.html  problem.css  problem.html  problem.js  script.js  styles.css
dsa_website/data/: problem-details.js  problems.js
dsa_website/java/: DSAAlgorithms.java  LeetCodeProblems.java
dsa_website/python/: algorithms.py  leetcode_problems.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  index.css
scripts/: test_web_vs_local.py
