[project]
name = "browser-llm-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.96.0",
    "httpx>=0.28.1",
    "playwright>=1.57.0",
    "pymupdf>=1.26.7",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.9",
    "requests>=2.32.5",
]
